--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -15,7 +15,8 @@
          justify-content: center;
 			}
       img {
-        width: 400px;
+        max-width: 400px;
+        width: 100%;
       }
 		</style>
   </head>
